CREATE TABLE PHYSICAL_EVALUATIONS (
    EVALUATION_ID UUID PRIMARY KEY,
    STUDENT_ID UUID NOT NULL,
    EVALUATION_DATE DATE NOT NULL,
    WEIGHT DOUBLE PRECISION NOT NULL,
    HEIGHT DOUBLE PRECISION NOT NULL,
    BMI DOUBLE PRECISION NOT NULL,
    
    -- Circumferences (in centimeters)
    CIRC_RIGHT_ARM_RELAXED DOUBLE PRECISION,
    CIRC_LEFT_ARM_RELAXED DOUBLE PRECISION,
    CIRC_RIGHT_ARM_FLEXED DOUBLE PRECISION,
    CIRC_LEFT_ARM_FLEXED DOUBLE PRECISION,
    CIRC_WAIST DOUBLE PRECISION,
    CIRC_ABDOMEN DOUBLE PRECISION,
    CIRC_HIP DOUBLE PRECISION,
    CIRC_RIGHT_THIGH DOUBLE PRECISION,
    CIRC_LEFT_THIGH DOUBLE PRECISION,
    CIRC_RIGHT_CALF DOUBLE PRECISION,
    CIRC_LEFT_CALF DOUBLE PRECISION,
    
    -- Subcutaneous Folds (in millimeters)
    FOLD_TRICEPS DOUBLE PRECISION,
    FOLD_THORAX DOUBLE PRECISION,
    FOLD_SUBAXILLARY DOUBLE PRECISION,
    FOLD_SUBSCAPULAR DOUBLE PRECISION,
    FOLD_ABDOMINAL DOUBLE PRECISION,
    FOLD_SUPRAILIAC DOUBLE PRECISION,
    FOLD_THIGH DOUBLE PRECISION,
    
    -- Diameters (in centimeters)
    DIAM_UMERUS DOUBLE PRECISION,
    DIAM_FEMUR DOUBLE PRECISION,
    
    -- Audit fields
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    DELETED_AT TIMESTAMP,
    
    CONSTRAINT FK_PHYSICAL_EVALUATIONS_STUDENT FOREIGN KEY (STUDENT_ID) REFERENCES STUDENTS (STUDENT_ID) ON DELETE CASCADE
);

-- Indexes for better query performance
CREATE INDEX IDX_PHYSICAL_EVALUATIONS_STUDENT_ID ON PHYSICAL_EVALUATIONS (STUDENT_ID);
CREATE INDEX IDX_PHYSICAL_EVALUATIONS_DATE ON PHYSICAL_EVALUATIONS (EVALUATION_DATE);
CREATE INDEX IDX_PHYSICAL_EVALUATIONS_DELETED_AT ON PHYSICAL_EVALUATIONS (DELETED_AT);
CREATE INDEX IDX_PHYSICAL_EVALUATIONS_STUDENT_DATE ON PHYSICAL_EVALUATIONS (STUDENT_ID, EVALUATION_DATE DESC);

