CREATE TABLE IF NOT EXISTS EXERCISES (
   ID UUID PRIMARY KEY,
   NAME VARCHAR(120) NOT NULL,
   DESCRIPTION VARCHAR(255),
   CREATED_AT TIMESTAMP NOT NULL DEFAULT NOW(),
   UPDATED_AT TIMESTAMP,
   DELETED_AT TIMESTAMP
);
