CREATE TABLE IF NOT EXISTS ADMINISTRATORS (
   ID UUID PRIMARY KEY,
   FIRST_NAME VARCHAR(100) NOT NULL,
   LAST_NAME VARCHAR(100) NOT NULL,
   EMAIL VARCHAR(255) NOT NULL UNIQUE,
   PASSWORD VARCHAR(255) NOT NULL,
   CREATED_AT TIMESTAMP NOT NULL DEFAULT NOW(),
   UPDATED_AT TIMESTAMP,
   DELETED_AT TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_administrators_email ON ADMINISTRATORS(EMAIL);
CREATE INDEX IF NOT EXISTS idx_administrators_deleted_at ON ADMINISTRATORS(DELETED_AT);