CREATE TYPE insomnia_frequency AS ENUM ('yes', 'no', 'sometimes');
CREATE TYPE physical_impairment_type AS ENUM ('motor', 'sensory', 'cognitive', 'other');

CREATE TABLE STUDENTS (
    STUDENT_ID UUID PRIMARY KEY,
    EMAIL VARCHAR(255) UNIQUE NOT NULL,
    NAME VARCHAR(100) NOT NULL,
    SURNAME VARCHAR(100) NOT NULL,
    GENDER CHAR NOT NULL CHECK (GENDER IN ('M', 'F', 'O')),
    BIRTH_DATE DATE NOT NULL,
    PHONE VARCHAR(20),
    PROFESSION VARCHAR(100),
    STREET VARCHAR(255),
    NUMBER VARCHAR(20),
    COMPLEMENT VARCHAR(255),
    NEIGHBORHOOD VARCHAR(255),
    CEP VARCHAR(10),
    REGISTRATION_DATE DATE DEFAULT CURRENT_DATE,
    EMERGENCY_CONTACT_NAME VARCHAR(255),
    EMERGENCY_CONTACT_PHONE VARCHAR(20),
    EMERGENCY_CONTACT_RELATIONSHIP VARCHAR(255),
    OBJECTIVES VARCHAR(255),
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    DELETED_AT TIMESTAMP
);

CREATE TABLE ANAMNESIS (
    STUDENT_ID UUID PRIMARY KEY,
    MEDICATION VARCHAR(255),
    IS_DOCTOR_AWARE_OF_PHYSICAL_ACTIVITY BOOLEAN NOT NULL,
    FAVORITE_PHYSICAL_ACTIVITY VARCHAR(255),
    HAS_INSOMNIA insomnia_frequency NOT NULL,
    DIET_ORIENTED_BY VARCHAR(255),
    CARDIAC_PROBLEMS VARCHAR(255),
    HAS_HYPERTENSION BOOLEAN NOT NULL,
    CHRONIC_DISEASES VARCHAR(255),
    DIFFICULTIES_IN_PHYSICAL_ACTIVITIES VARCHAR(255),
    MEDICAL_ORIENTATIONS_TO_AVOID_PHYSICAL_ACTIVITY VARCHAR(255),
    SURGERIES_IN_THE_LAST_12_MONTHS VARCHAR(255),
    RESPIRATORY_PROBLEMS VARCHAR(255),
    JOINT_MUSCULAR_BACK_PAIN VARCHAR(255),
    SPINAL_DISC_PROBLEMS VARCHAR(255),
    DIABETES VARCHAR(255), 
    SMOKING_DURATION VARCHAR(100), 
    ALTERED_CHOLESTEROL BOOLEAN NOT NULL,
    OSTEOPOROSIS_LOCATION VARCHAR(255), 
    OBJECTIVES VARCHAR(255),
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    CONSTRAINT FK_ANAMNESIS_STUDENT FOREIGN KEY (STUDENT_ID) REFERENCES STUDENTS (STUDENT_ID) ON DELETE CASCADE
);

CREATE TABLE PHYSICAL_IMPAIRMENTS (
    ID UUID PRIMARY KEY,
    STUDENT_ID UUID NOT NULL,
    IMPAIRMENT_TYPE physical_impairment_type NOT NULL,
    NAME VARCHAR(255) NOT NULL,
    OBSERVATIONS VARCHAR(255),
    CONSTRAINT FK_PHYSICAL_IMPAIRMENTS_STUDENT FOREIGN KEY (STUDENT_ID) REFERENCES ANAMNESIS (STUDENT_ID) ON DELETE CASCADE
);

CREATE INDEX IDX_STUDENTS_EMAIL ON STUDENTS (EMAIL);
CREATE INDEX IDX_STUDENTS_CREATED_AT ON STUDENTS (CREATED_AT);
CREATE INDEX IDX_STUDENTS_NAME_SURNAME ON STUDENTS (NAME, SURNAME);
CREATE INDEX IDX_STUDENTS_DELETED_AT ON STUDENTS (DELETED_AT);

CREATE INDEX IDX_ANAMNESIS_STUDENT_ID ON ANAMNESIS (STUDENT_ID);
CREATE INDEX IDX_ANAMNESIS_HAS_INSOMNIA ON ANAMNESIS (HAS_INSOMNIA);
CREATE INDEX IDX_ANAMNESIS_DIET_ORIENTED_BY ON ANAMNESIS (DIET_ORIENTED_BY);

CREATE INDEX IDX_PHYSICAL_IMPAIRMENTS_STUDENT_ID ON PHYSICAL_IMPAIRMENTS (STUDENT_ID);
CREATE INDEX IDX_PHYSICAL_IMPAIRMENTS_TYPE ON PHYSICAL_IMPAIRMENTS (IMPAIRMENT_TYPE);
